--- a/css/game.html
+++ b/css/game.html
@@ -54,7 +54,7 @@
         }
         
         .box3 {
-            box-sizing: content-box;
+            box-sizing: border-box;
             position: relative;
             bottom: 300px;
             width: 100px;
