--- a/html/table.html
+++ b/html/table.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table {
+            border-collapse: collapse;
+        }
+
+        table, td, tr, th {
+            border: 1px solid #000000;
+        }
+
+
+        td {
+            width: 50px;
+            height: 50px;
+        }
+    </style>
 </head>
 <body>
     <table>
